Wed Mar  5 21:26:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC:
        * MPC/config:
        * MPC/config/xsc.mpb:
        * MPC/config/xsc_common.mpb:
        * XSC.mwc:
        
          Moved all the base projects to MPC/config, which is the 
          standard convention for DOC projects.

        * xsc.mpb:
        * xsc_common.mpb:

          Removed these files.

Wed Mar  5 21:09:16 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC.mwc:
        * XSCRT/XSCRT/utils:
        * XSCRT/XSCRT/utils/File.h:
        * XSCRT/XSCRT/utils/File.cpp:
        * XSCRT/XSCRT/utils/File_T.h:
        * XSCRT/XSCRT/utils/File_T.cpp:
        * XSCRT/XSCRT/utils/XSCRT_Utils_export.h:
        * XSCRT/XSCRT/utils/utils.mpc:

          Implemented a utility class to simplify reading XML files and
          populating XSC generated objects.

        * xsc.mpb:
        * xsc_common.mpb:

          Base projects used to build XSC.

2007-08-29    <wotte@localhost.localdomain>

        * XSC.mwc
        * XSC/Parser.hpp
        * XSC/SemanticGraph/Fundamental.cpp
        * XSC/SemanticGraph/Fundamental.hpp
        * XSC/SemanticGraph/Fundamental.cpp.m4
        * XSC/SemanticGraph/Fundamental.hpp.m4
        * XSC/Parser.cpp
        * CXX/Generator.cpp

          Changes necessary to support AttributeGroups.

2007-07-05    <wotte@localhost.localdomain>

        * xsc.cpp

          Fixed a couple subtle bugs with program_options.

Thu Mar  1 07:12:19 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/SemanticGraph/Fundamental.hpp
        * XSC/Parser.cpp

          Fixed bug whereby restrictions inside simple types would be
          interpreted as both complex types and simple types, messing up
          generated code.

        * CXX/Elements.hpp
        * CXX/Generator.cpp
        * CXX/Header.cpp
        * CXX/Header.hpp

          Fixed suble bug that arose as a result of the migration to