@@ -4,7 +4,7 @@ workspace (XSC) {
   cmdline += -include $XSC_ROOT/MPC/config
   
   binary {
-    cmdline += -static -include . -include ./bin
+    cmdline += -include . -include ./bin  -static
 
     ./XSC
     ./CXX
