@@ -11,6 +11,8 @@
 //=============================================================================
 
 #include "File.h"
+#include <string>
+#include <memory>
 
 namespace XSCRT
 {
@@ -29,12 +31,24 @@ struct reader_function
 };
 
 /**
+ * @struct writer_function
+ *
+ * Trait for determining an XSC element's writer function signature.
+ */
+template <typename T>
+struct writer_function
+{
+  /// Type definition of the writing function signature.
+  typedef void (* result_type) (T const &, xercesc::DOMDocument *);
+};
+
+/**
  * @class File_Reader_T
  *
  * Helper class for reading XML documents using XSC.
  */
 template <typename T, typename C = char>
-class File_Reader_T : File
+class File_Reader_T : public File
 {
 public:
   /// Type definition of the entity type.
@@ -84,6 +98,70 @@ private:
 	xercesc::DOMBuilder * parser_;
 };
 
+/**
+ * @class File_Reader_T
+ *
+ * Helper class for reading XML documents using XSC.
+ */
+template <typename T, typename C = char>
+class File_Writer_T : public File 
+{
+public:
+  /// Type definition of the entity type.
+  typedef T entity_type;
+
+  /// Type definition of the character type.
+  typedef C char_type;
+
+  /**
+   * Initializing constructor.
+   *
+   * @param[in]       ns          Target namespace.
+   * @param[in]       root        Name of the root element.
+   * @param[in]       writer      The XSC writer function.
+   */
+  File_Writer_T (const std::basic_string <C> & ns,
+                 const std::basic_string <C> & root,
+                 typename writer_function <T>::result_type writer);
+
+  /// Destructor.
+  virtual ~File_Writer_T (void);
+
+  /**
+   * Open the file for reading. This will open the \a filename if
+   * it exists, and populate contained Xerces-C document.
+   *
+   * @param[in]         filename        Name of the XML file.
+   * @retval            0               Successfully opened file.
+   * @retval            -1              Failed to open file.
+   */
+  int open (const std::basic_string <C> & filename);
+
+  /**
+   * Extraction operator.
+   *
+   * @param[in]         entity        Target entity.
+   * @return            Reference to the file reader.
+   */
+  File_Writer_T & operator << (T & entity);
+
+  /**
+   * Get the contained DOM writer.
+   *
+   * @return            Pointer to the DOM writer.
+   */
+  xercesc::DOMWriter const * writer (void);
+
+private:
+  /// The entity read from the document.
+  typename writer_function <T>::result_type writer_;
+
+	/// xerces-c builder responsible for reading XML.
+	xercesc::DOMWriter * dom_writer_;
+
+	/// Target output for the writer.
+  std::auto_ptr <xercesc::XMLFormatTarget> target_;
+};
 }
 }
 
