@@ -1,3 +1,13 @@
+Mon Mar 10 15:14:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * XSC.mwc:
+        * XSCRT/XSCRT/utils/File.h:
+        * XSCRT/XSCRT/utils/File_T.h:
+        * XSCRT/XSCRT/utils/File_T.cpp:
+        * XSCRT/XSCRT/utils/utils.mpc:
+        
+          Added a generic writer to the utility classes.
+
 Wed Mar  5 21:26:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MPC:
@@ -5,8 +15,8 @@ Wed Mar  5 21:26:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
         * MPC/config/xsc.mpb:
         * MPC/config/xsc_common.mpb:
         * XSC.mwc:
-        
-          Moved all the base projects to MPC/config, which is the 
+
+          Moved all the base projects to MPC/config, which is the
           standard convention for DOC projects.
 
         * xsc.mpb:
